Refreshed site from script.

--- a/templates/default.html
+++ b/templates/default.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="logo">
-                <a href="/">Spencer's Adventures in Zurich</a>
+                <a href="/">30 Minutes</a>
             </div>
             <nav>
                 <a href="/">Home</a>
