Refreshed site from script.

--- a/css/default.css
+++ b/css/default.css
@@ -13,7 +13,8 @@
 }
 
 body {
-    background: #F8F7E5;
+    /* background: #F8F7E5; */
+    background: #EAF2F8;
     color: #000;
     font-family: sans-serif;
     font-size: 16px;
