--- a/css/default.css
+++ b/css/default.css
@@ -13,8 +13,10 @@
 }
 
 body {
-    /* background: #F8F7E5; */
-    background: #EAF2F8;
+    background: #F8F7E5;
+    /* background: #fffff0;
+    background: #F5EEF8; */
+
     color: #000;
     font-family: sans-serif;
     font-size: 16px;
@@ -24,12 +26,12 @@ body {
 }
 
 a{
-    color: #0f31a0;
+    color: #7D3C98;
     text-decoration: none;
 }
 
 header {
-    border-bottom: 1px solid #0f31a0;
+    border-bottom: 1px solid #7D3C98;
     margin-bottom: 30px;
     padding: 0px 0px 12px 0px;
     z-index: 999;
@@ -41,7 +43,7 @@ div.logo {
 }
 
 div.logo a {
-    color: darkorange;
+    color: #F1C40F;
     font-family: 'Carter One', sans-serif;
     font-size: 38px;
     font-weight: bold;
@@ -54,7 +56,7 @@ header nav {
 }
 
 header nav a {
-    color: #0f31a0;
+    color: #7D3C98;
     font-family: 'Carter One', sans-serif;
     font-size: 20px;
     font-weight: bold;
@@ -64,13 +66,13 @@ header nav a {
 }
 
 header nav a:hover {
-    color:darkorange;
+    color:#F1C40F;
     text-decoration: none;
 }
 
 
 footer {
-    background: #0f31a0;
+    background: #F1C40F;
     color: #000000;
     font-size: 12px;
     padding: 32px 0px 32px 0px;
@@ -82,7 +84,7 @@ footer {
 }
 
 footer a {
-    color: lightblue;
+    color: 7D3C98;
     text-decoration: none;
 }
 
