--- a/templates/post.html
+++ b/templates/post.html
@@ -13,8 +13,8 @@
     <script>
 
     var disqus_config = function () {
-    this.page.url = 'https://spencerpeters.github.io/30-minutes$url$';  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = '30-minutes/$path$'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.url = 'https://spencerpeters.github.io/cornell-personal-site$url$';  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = 'cornell-personal-site/$path$'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
 
     (function() { // DON'T EDIT BELOW THIS LINE
